z-index fixes

--- a/app/assets/stylesheets/framework.scss
+++ b/app/assets/stylesheets/framework.scss
@@ -3,7 +3,7 @@ header {
     padding: 1rem;
     padding-left: 2rem;
     color: #f2f3f4;
-    z-index: 2;
+    z-index: 10;
     position: relative;
     background-color: #083d77;
     border-bottom: 1px solid #f2f3f4;
